2006-07-24  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_BackRefModel.py (BackRefModel.load_model):
	Translate displayed object type.
	* debian/control (Build-Depends-Indep): Add python-central; 
	(XS-Python-Version): Add.

2006-07-23  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/GraphViz.py (get_date_strings): Typo.

2006-07-23  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix bug for no surname (bug #265)

2006-07-23  Manfred Paulus  <manfred.paulus@gmx.de>
	* src/BaseDoc.py: fix angle calculation
	* src/docgen/PSDrawDoc.py: fix angle calculation

2006-07-23  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (GedcomParser.func_person_even): set
	default type for an event to CUSTOM

2006-07-23  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsLessThanNthGenerationDescendantOf.py
	(IsLessThanNthGenerationDescendantOf.init_list): Use new API.
	* src/Filters/Rules/Person/_IsSiblingOfFilterMatch.py
	(IsSiblingOfFilterMatch.init_list): Use new API.
	* src/Filters/Rules/Person/_RelationshipPathBetween.py
	(RelationshipPathBetween.desc_list): Use new API.
	* src/Filters/Rules/Person/_HaveChildren.py (HaveChildren.apply):
	Use new API.
	* src/Filters/Rules/Person/_IsMoreThanNthGenerationDescendantOf.py
	(IsMoreThanNthGenerationDescendantOf.init_list): Use new API.
	* src/Filters/Rules/__init__.py: Expose Rule for plugin filters.
	* src/Filters/Rules/Person/_IsDescendantOf.py
	(IsDescendantOf.init_list): Use new API.
	* src/Filters/Rules/Person/_HasRelationship.py
	(HasRelationship.apply): Use new API.

2006-07-22  Don Allingham  <don@gramps-project.org>
	* src/Filters/Rules/Person/__init__.py: add register function
	* configure.in: bump up version number 

2006-07-22  Alex Roitman  <shura@gramps-project.org>
	* Makefile.am (SUBDIRS): Add debian dir.
	* configure.in: Generate debian/Makefile
	* debian/Makefile.am: Add makefile to place the debian dir in the